--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,101 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorDark"
     tools:context=".fragment.HomeFragment">
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
-        android:src="@drawable/baseline_add_white_18"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHomeScore" />
+    <Button
+        android:id="@+id/button_decrease_home"
+        style="@style/Widget.AppCompat.Button.Colored.Counter.Minus"
+        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewHomeScore"
+        app:layout_constraintEnd_toStartOf="@+id/textViewHomeScore"
+        app:layout_constraintTop_toTopOf="@+id/textViewHomeScore" />
 
     <TextView
         android:id="@+id/textViewHomeScore"
+        style="@style/TextViewNumbers.Red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/text_view_home"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large.Numbers"
-        app:layout_constraintEnd_toEndOf="@+id/textViewHome"
-        app:layout_constraintStart_toStartOf="@+id/textViewHome"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHome"
-        tools:text="010" />
+        app:layout_constraintEnd_toEndOf="@+id/textViewHomeLayout"
+        app:layout_constraintStart_toStartOf="@+id/textViewHomeLayout"
+        app:layout_constraintTop_toBottomOf="@+id/textViewHomeLayout"
+        tools:text="109" />
 
-    <TextView
-        android:id="@+id/textViewHome"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textViewHomeLayout"
+        style="@style/Widget.Design.TextInputLayout.TeamName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/text_view_guest"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        android:hint="@string/text_view_home"
+        app:layout_constraintEnd_toStartOf="@+id/guideline50"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/edit_text_home_name"
+            style="@style/Widget.AppCompat.EditText.TeamName.X"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            app:backgroundTint="@android:color/white" />
+
+    </android.support.design.widget.TextInputLayout>
+
 
     <android.support.constraint.Guideline
-        android:id="@+id/guideline"
+        android:id="@+id/guideline50"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
-    <TextView
-        android:id="@+id/textViewGuest"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/edit_text_guest_name_layout"
+        style="@style/Widget.Design.TextInputLayout.TeamName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="VISITA"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:hint="@string/text_view_guest"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guideline50"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/edit_text_guest_name"
+            style="@style/Widget.AppCompat.EditText.TeamName.X"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            app:backgroundTint="@android:color/white" />
+
+    </android.support.design.widget.TextInputLayout>
+
 
     <TextView
         android:id="@+id/textView5"
+        style="@style/TextViewNumbers.White"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SET"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:text="@string/text_view_title_set"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewHomeScore" />
 
     <TextView
         android:id="@+id/textViewSet"
+        style="@style/TextViewNumbers.Red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Numbers"
+        android:text="234"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
-        tools:text="8" />
+        tools:text="823" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/text_view_home_violations_title"
+        style="@style/TextViewNumbers.White"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -103,74 +106,125 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/text_view_faltas"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        android:text="@string/text_view_violations"
+        app:layout_constraintEnd_toStartOf="@+id/guideline50"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+        app:layout_constraintTop_toBottomOf="@+id/button_decrease_home" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/text_view_guest_violations_title"
+        style="@style/TextViewNumbers.White"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:text="@string/text_view_faltas"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:text="@string/text_view_violations"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
+        app:layout_constraintStart_toStartOf="@+id/guideline50"
+        app:layout_constraintTop_toTopOf="@+id/text_view_home_violations_title" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/text_view_guest_score"
+        style="@style/TextViewNumbers.Red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large.Numbers"
-        app:layout_constraintEnd_toEndOf="@+id/textViewGuest"
-        app:layout_constraintStart_toStartOf="@+id/textViewGuest"
-        app:layout_constraintTop_toTopOf="@+id/textViewHomeScore"
+        android:text="563"
+        app:layout_constraintEnd_toEndOf="@+id/edit_text_guest_name_layout"
+        app:layout_constraintStart_toStartOf="@+id/edit_text_guest_name_layout"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_guest_name_layout"
         tools:text="050" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/text_view_home_violations"
+        style="@style/TextViewNumbers.Red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Numbers"
-        app:layout_constraintEnd_toEndOf="@+id/textView7"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        tools:text="4" />
+        android:layout_marginTop="@dimen/margin_top_counter"
+        android:text="123"
+        app:layout_constraintEnd_toEndOf="@+id/text_view_home_violations_title"
+        app:layout_constraintStart_toStartOf="@+id/text_view_home_violations_title"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_home_violations_title"
+        tools:text="412" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/text_view_guest_violations"
+        style="@style/TextViewNumbers.Red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Numbers"
-        app:layout_constraintEnd_toEndOf="@+id/textView8"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toTopOf="@+id/textView9"
+        android:text="456"
+        app:layout_constraintEnd_toEndOf="@+id/text_view_guest_violations_title"
+        app:layout_constraintStart_toStartOf="@+id/text_view_guest_violations_title"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_guest_violations_title"
         tools:text="5" />
 
     <android.support.constraint.Guideline
-        android:id="@+id/guideline2"
+        android:id="@+id/guideline25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp"
         app:layout_constraintGuide_percent="0.25" />
+
+    <Button
+        android:id="@+id/button_increase_home"
+        style="@style/Widget.AppCompat.Button.Colored.Counter.Plus"
+        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewHomeScore"
+        app:layout_constraintStart_toEndOf="@+id/textViewHomeScore"
+        app:layout_constraintTop_toTopOf="@+id/textViewHomeScore" />
+
+    <Button
+        android:id="@+id/button_decrease_home_violations"
+        style="@style/Widget.AppCompat.Button.Colored.Counter.Minus"
+        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_home_violations"
+        app:layout_constraintEnd_toStartOf="@+id/text_view_home_violations"
+        app:layout_constraintTop_toTopOf="@+id/text_view_home_violations" />
+
+    <Button
+        android:id="@+id/button_increase_home_violations"
+        style="@style/Widget.AppCompat.Button.Colored.Counter.Plus"
+        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_home_violations"
+        app:layout_constraintStart_toEndOf="@+id/text_view_home_violations"
+        app:layout_constraintTop_toTopOf="@+id/text_view_home_violations" />
+
+    <Button
+        android:id="@+id/button_decrease_sets"
+        style="@style/Widget.AppCompat.Button.Colored.Counter.Minus"
+        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewSet"
+        app:layout_constraintEnd_toStartOf="@+id/textViewSet"
+        app:layout_constraintTop_toTopOf="@+id/textViewSet" />
+
+    <Button
+        android:id="@+id/button_increase_sets"
+        style="@style/Widget.AppCompat.Button.Colored.Counter.Plus"
+        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewSet"
+        app:layout_constraintStart_toEndOf="@+id/textViewSet"
+        app:layout_constraintTop_toTopOf="@+id/textViewSet" />
+
+    <Button
+        android:id="@+id/button_decrease_guest_score"
+        style="@style/Widget.AppCompat.Button.Colored.Counter.Minus"
+        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_guest_score"
+        app:layout_constraintEnd_toStartOf="@+id/text_view_guest_score"
+        app:layout_constraintTop_toTopOf="@+id/text_view_guest_score" />
+
+    <Button
+        android:id="@+id/button_increase_guest_score"
+        style="@style/Widget.AppCompat.Button.Colored.Counter.Plus"
+        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_guest_score"
+        app:layout_constraintStart_toEndOf="@+id/text_view_guest_score"
+        app:layout_constraintTop_toTopOf="@+id/text_view_guest_score" />
+
 
 </android.support.constraint.ConstraintLayout>
