--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,26 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_menu_play"
         android:icon="@drawable/ic_play_arrow_white_24dp"
         android:orderInCategory="0"
         android:title="Arranque"
         app:showAsAction="always" />
     <item
+        android:id="@+id/action_menu_pause"
         android:icon="@drawable/baseline_pause_white_24"
         android:orderInCategory="1"
         android:title="Paro"
         app:showAsAction="always" />
+
     <item
+        android:id="@+id/action_menu_reset"
         android:icon="@drawable/ic_refresh_white_24dp"
         android:orderInCategory="2"
         android:title="Reset"
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/action_menu_bluetooth"
+        android:orderInCategory="3"
         android:title="@string/toolbar_title_bluetooth"
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_menu_about"
+        android:orderInCategory="4"
         android:title="@string/toolbar_title_about"
         app:showAsAction="never" />
 
