--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,11 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff0000</color>
-    <color name="colorDark">#303030</color>
+    <!--<color name="colorDark">#303030</color>-->
+    <color name="colorDark">#000000</color>
+    <color name="colorSecondaryText">#757575</color>
+
+    <color name="divider">#BDBDBD</color>
 
 
 </resources>
