--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="max_length_team_name">20</integer>
     <integer name="ems_team_name">8</integer>
+    <integer name="passwordLength">4</integer>
 </resources>
