--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,15 +8,15 @@
     tools:context=".fragment.HomeFragment">
 
     <Button
-        android:id="@+id/button_decrease_home"
-        style="@style/Widget.AppCompat.Button.Colored.Counter.Minus"
-        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewHomeScore"
-        app:layout_constraintEnd_toStartOf="@+id/textViewHomeScore"
-        app:layout_constraintTop_toTopOf="@+id/textViewHomeScore" />
+        android:id="@+id/button_decrease_home_score"
+        style="@style/Widget.AppCompat.Button.Counter.Minus"
+        android:theme="@style/Widget.AppCompat.Button.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_home_score"
+        app:layout_constraintEnd_toStartOf="@+id/text_view_home_score"
+        app:layout_constraintTop_toTopOf="@+id/text_view_home_score" />
 
     <TextView
-        android:id="@+id/textViewHomeScore"
+        android:id="@+id/text_view_home_score"
         style="@style/TextViewNumbers.Red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -81,21 +81,20 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="@string/text_view_title_set"
-        app:layout_constraintBottom_toTopOf="@+id/textViewSet"
+        app:layout_constraintBottom_toTopOf="@+id/text_view_number_of_set"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textViewSet"
+        android:id="@+id/text_view_number_of_set"
         style="@style/TextViewNumbers.Red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="234"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="823" />
+        tools:text="8" />
 
     <TextView
         android:id="@+id/text_view_home_violations_title"
@@ -106,11 +105,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/text_view_violations"
         app:layout_constraintEnd_toStartOf="@+id/guideline50"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_decrease_home" />
+        app:layout_constraintTop_toBottomOf="@+id/button_decrease_home_score" />
 
     <TextView
         android:id="@+id/text_view_guest_violations_title"
@@ -135,7 +134,6 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:text="563"
         app:layout_constraintEnd_toEndOf="@+id/edit_text_guest_name_layout"
         app:layout_constraintStart_toStartOf="@+id/edit_text_guest_name_layout"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_guest_name_layout"
@@ -146,18 +144,16 @@
         style="@style/TextViewNumbers.Red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="123"
         app:layout_constraintEnd_toEndOf="@+id/text_view_home_violations_title"
         app:layout_constraintStart_toStartOf="@+id/text_view_home_violations_title"
         app:layout_constraintTop_toBottomOf="@+id/text_view_home_violations_title"
-        tools:text="412" />
+        tools:text="9" />
 
     <TextView
         android:id="@+id/text_view_guest_violations"
         style="@style/TextViewNumbers.Red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="456"
         app:layout_constraintEnd_toEndOf="@+id/text_view_guest_violations_title"
         app:layout_constraintStart_toStartOf="@+id/text_view_guest_violations_title"
         app:layout_constraintTop_toBottomOf="@+id/text_view_guest_violations_title"
@@ -171,76 +167,111 @@
         app:layout_constraintGuide_percent="0.25" />
 
     <Button
-        android:id="@+id/button_increase_home"
-        style="@style/Widget.AppCompat.Button.Colored.Counter.Plus"
-        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewHomeScore"
-        app:layout_constraintStart_toEndOf="@+id/textViewHomeScore"
-        app:layout_constraintTop_toTopOf="@+id/textViewHomeScore" />
+        android:id="@+id/button_increase_home_score"
+        style="@style/Widget.AppCompat.Button.Counter.Plus"
+        android:gravity="center"
+        android:textAlignment="gravity"
+        android:theme="@style/Widget.AppCompat.Button.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_home_score"
+        app:layout_constraintStart_toEndOf="@+id/text_view_home_score"
+        app:layout_constraintTop_toTopOf="@+id/text_view_home_score" />
 
     <Button
         android:id="@+id/button_decrease_home_violations"
-        style="@style/Widget.AppCompat.Button.Colored.Counter.Minus"
-        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        style="@style/Widget.AppCompat.Button.Counter.Minus"
+        android:theme="@style/Widget.AppCompat.Button.Counter"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_home_violations"
         app:layout_constraintEnd_toStartOf="@+id/text_view_home_violations"
         app:layout_constraintTop_toTopOf="@+id/text_view_home_violations" />
 
     <Button
         android:id="@+id/button_increase_home_violations"
-        style="@style/Widget.AppCompat.Button.Colored.Counter.Plus"
-        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        style="@style/Widget.AppCompat.Button.Counter.Plus"
+        android:theme="@style/Widget.AppCompat.Button.Counter"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_home_violations"
         app:layout_constraintStart_toEndOf="@+id/text_view_home_violations"
         app:layout_constraintTop_toTopOf="@+id/text_view_home_violations" />
 
     <Button
         android:id="@+id/button_decrease_sets"
-        style="@style/Widget.AppCompat.Button.Colored.Counter.Minus"
-        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewSet"
-        app:layout_constraintEnd_toStartOf="@+id/textViewSet"
-        app:layout_constraintTop_toTopOf="@+id/textViewSet" />
+        style="@style/Widget.AppCompat.Button.Counter.Minus"
+        android:theme="@style/Widget.AppCompat.Button.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_number_of_set"
+        app:layout_constraintEnd_toStartOf="@+id/text_view_number_of_set"
+        app:layout_constraintTop_toTopOf="@+id/text_view_number_of_set" />
 
     <Button
         android:id="@+id/button_increase_sets"
-        style="@style/Widget.AppCompat.Button.Colored.Counter.Plus"
-        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewSet"
-        app:layout_constraintStart_toEndOf="@+id/textViewSet"
-        app:layout_constraintTop_toTopOf="@+id/textViewSet" />
+        style="@style/Widget.AppCompat.Button.Counter.Plus"
+        android:theme="@style/Widget.AppCompat.Button.Counter"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_number_of_set"
+        app:layout_constraintStart_toEndOf="@+id/text_view_number_of_set"
+        app:layout_constraintTop_toTopOf="@+id/text_view_number_of_set" />
 
     <Button
         android:id="@+id/button_decrease_guest_score"
-        style="@style/Widget.AppCompat.Button.Colored.Counter.Minus"
-        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        style="@style/Widget.AppCompat.Button.Counter.Minus"
+        android:theme="@style/Widget.AppCompat.Button.Counter"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_guest_score"
         app:layout_constraintEnd_toStartOf="@+id/text_view_guest_score"
         app:layout_constraintTop_toTopOf="@+id/text_view_guest_score" />
 
     <Button
         android:id="@+id/button_increase_guest_score"
-        style="@style/Widget.AppCompat.Button.Colored.Counter.Plus"
-        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        style="@style/Widget.AppCompat.Button.Counter.Plus"
+        android:theme="@style/Widget.AppCompat.Button.Counter"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_guest_score"
         app:layout_constraintStart_toEndOf="@+id/text_view_guest_score"
         app:layout_constraintTop_toTopOf="@+id/text_view_guest_score" />
 
     <Button
         android:id="@+id/button_decrease_guest_violations"
-        style="@style/Widget.AppCompat.Button.Colored.Counter.Minus"
-        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        style="@style/Widget.AppCompat.Button.Counter.Minus"
+        android:theme="@style/Widget.AppCompat.Button.Counter"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_guest_violations"
         app:layout_constraintEnd_toStartOf="@+id/text_view_guest_violations"
         app:layout_constraintTop_toTopOf="@+id/text_view_guest_violations" />
 
     <Button
         android:id="@+id/button_increase_guest_violations"
-        style="@style/Widget.AppCompat.Button.Colored.Counter.Plus"
-        android:theme="@style/Widget.AppCompat.Button.Colored.Counter"
+        style="@style/Widget.AppCompat.Button.Counter.Plus"
+        android:theme="@style/Widget.AppCompat.Button.Counter"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_guest_violations"
         app:layout_constraintStart_toEndOf="@+id/text_view_guest_violations"
         app:layout_constraintTop_toTopOf="@+id/text_view_guest_violations" />
+
+    <TextView
+        android:id="@+id/text_view_title_time"
+        style="@style/TextViewNumbers.White"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_view_time"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text_view_time"
+        style="@style/TextViewNumbers.Red"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="88:22"
+        app:layout_constraintEnd_toEndOf="@+id/text_view_title_time"
+        app:layout_constraintStart_toStartOf="@+id/text_view_title_time"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_title_time" />
+
+    <!--<ImageButton-->
+    <!--style="@style/Widget.AppCompat.Button"-->
+    <!--android:layout_width="@dimen/size_button_counter"-->
+    <!--android:layout_height="@dimen/size_button_counter"-->
+    <!--android:layout_marginTop="8dp"-->
+    <!--android:src="@drawable/ic_timer_black_24dp"-->
+    <!--android:tint="@color/colorPrimary"-->
+    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent" />-->
 
 
 </android.support.constraint.ConstraintLayout>
