--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,6 +97,7 @@
 
     <style name="TextViewColon">
         <!--<item name="android:textColor">@color/primary_text</item>-->
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Large</item>
         <item name="android:text">:</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
