--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,4 +19,4 @@
     <!--android:background="?android:attr/windowBackground"-->
     <!--app:layout_constraintStart_toStartOf="parent"-->
     <!--app:menu="@menu/menu_bottom_navigation" />-->
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
