--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,13 +16,6 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_menu_reset_board"
-        android:icon="@drawable/ic_refresh_white_24dp"
-        android:orderInCategory="2"
-        android:title="@string/toolbar_title_reset_board"
-        app:showAsAction="always" />
-
-    <item
         android:id="@+id/action_menu_time"
         android:icon="@drawable/ic_timer_white_24dp"
         android:orderInCategory="2"
@@ -30,14 +23,25 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_menu_bluetooth"
+        android:id="@+id/action_menu_reset_time"
         android:orderInCategory="3"
+        android:title="@string/toolbar_title_reset_time" />
+
+    <item
+        android:id="@+id/action_menu_reset_board"
+        android:icon="@drawable/ic_refresh_white_24dp"
+        android:orderInCategory="4"
+        android:title="@string/toolbar_title_reset_board" />
+
+    <item
+        android:id="@+id/action_menu_bluetooth"
+        android:orderInCategory="5"
         android:title="@string/toolbar_title_bluetooth"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_menu_about"
-        android:orderInCategory="4"
+        android:orderInCategory="6"
         android:title="@string/toolbar_title_about"
         app:showAsAction="never" />
 
